// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.python.v1;

// Proto representation of the Python PlanningModel entity type.
message PlanningModel {
  // `MeasurementConsumer` ID from the CMMS public API.
  string cmms_measurement_consumer_id = 1;
  string external_planning_model_id = 2;
  repeated string external_reporting_set_ids = 3;

  enum State {
    // Default value. This value is unused.
    STATE_UNSPECIFIED = 0;
    CREATED = 1;
    IDENTIFIED_TRAINING_DATA = 2;
    WAITING_FOR_TRAINING_DATA = 3;
    WAITING_FOR_TRAINING = 4;
    SUCCEEDED = 5;
    FAILED = 6;
  }
  State state = 6;
}
